# app/Http/Controllers/CardController.php
@@ -25,23 +25,110 @@ class CardController extends Controller
     {
         $this->repository = $repository;
     }
+
     /**
-     * Display a listing of the resource.
+     * List all cards.
      *
-     * @return AnonymousResourceCollection
+     * @OA\Get(
+     *     path="/api/cards",
+     *     tags={"Cards"},
+     *     operationId="card-index",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get a cards collection"
+     *     )
+     * )
      */
-    public function index(): AnonymousResourceCollection
+    public function index(): Response
     {
-        return CardResource::collection($this->repository->all());
+        return Response(CardResource::collection($this->repository->all()));
     }
 
     /**
-     * Store a newly created resource in storage.
+     * Create a card.
      *
-     * @param Request $request
-     * @return CardResource|BadRequestResource|ErrorResource
+     * @OA\Post(
+     *     path="/api/cards",
+     *     tags={"Cards"},
+     *     operationId="card-store",
+     *     @OA\Parameter(
+     *          name="name",
+     *          in="query",
+     *          description="Card name.",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="description",
+     *          in="query",
+     *          description="Card description.",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="first_edition",
+     *          in="query",
+     *          description="Is first edition card.",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="serial_code",
+     *          in="query",
+     *          description="Card's serial code.",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="type",
+     *          in="query",
+     *          description="Type of card (Monster, Magic, Trap).",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="attack",
+     *          in="query",
+     *          description="Points of attack.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="defense",
+     *          in="query",
+     *          description="Points of defense.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="star",
+     *          in="query",
+     *          description="Card's quality.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="amount",
+     *          in="query",
+     *          description="Price of card.",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="subtype_id",
+     *          in="query",
+     *          description="Subtype of card.",
+     *          required=true,
+     *      ),
+     *     @OA\Parameter(
+     *          name="image_id",
+     *          in="query",
+     *          description="Image of card.",
+     *          required=true,
+     *      ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Card created."
+     *     ),
+     *      @OA\Response(
+     *         response=400,
+     *         description="Bad request."
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error."
+     *     )
+     * )
      */
-    public function store(Request $request): CardResource|BadRequestResource|ErrorResource
+    public function store(Request $request): Response
     {
         try {
             $validator = Validator::make($request->all(), [
@@ -62,43 +149,137 @@ class CardController extends Controller
                 throw new BadRequestException($validator->errors(), Response::HTTP_BAD_REQUEST);
             }
 
-            $response = new CardResource($this->repository->create($request->all()));
+            $response = Response(new CardResource($this->repository->create($request->all())));
         } catch (BadRequestException $badRequestException) {
-            $response = new BadRequestResource($badRequestException);
+            $response = Response($badRequestException->getMessage(), $badRequestException->getCode());
         } catch (Exception $exception) {
-            $response = new ErrorResource($exception);
+            $response = Response($exception->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
 
         return $response;
     }
 
     /**
-     * Display the specified resource.
+     * Get a specific card.
      *
-     * @param int $id
-     * @return CardResource|ErrorResource
+     * @OA\Get(
+     *     path="/api/cards/{id}",
+     *     tags={"Cards"},
+     *     operationId="card-show",
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="Card ID.",
+     *          required=true
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Card obteined."
+     *     ),
+     *      @OA\Response(
+     *         response=404,
+     *         description="Not found."
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error."
+     *     )
+     * )
      */
-    public function show(int $id): CardResource|ErrorResource
+    public function show(int $id): Response
     {
         try {
-            $response = new CardResource($this->repository->findOrFail($id));
+            $response = Response(new CardResource($this->repository->findOrFail($id)));
         } catch (ModelNotFoundException $notFoundException) {
-            $response = new ErrorResource($notFoundException);
+            $response = Response($notFoundException->getMessage(), $notFoundException->getCode());
         } catch (Exception $exception) {
-            $response = new ErrorResource($exception);
+            $response = Response($exception->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
 
         return $response;
     }
 
     /**
-     * Update the specified resource in storage.
+     * Update a specific card.
      *
-     * @param Request $request
-     * @param int $id
-     * @return CardResource|BadRequestResource|ErrorResource
+     * @OA\Patch (
+     *     path="/api/cards",
+     *     tags={"Cards"},
+     *     operationId="card-update",
+     *     @OA\Parameter(
+     *          name="name",
+     *          in="query",
+     *          description="Card's name.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="description",
+     *          in="query",
+     *          description="Card's description.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="first_edition",
+     *          in="query",
+     *          description="Is first edition card.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="serial_code",
+     *          in="query",
+     *          description="Card's serial code.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="type",
+     *          in="query",
+     *          description="Type of card (Monster, Magic, Trap).",
+     *      ),
+     *     @OA\Parameter(
+     *          name="attack",
+     *          in="query",
+     *          description="Points of attack.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="defense",
+     *          in="query",
+     *          description="Points of defense.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="star",
+     *          in="query",
+     *          description="Card's quality.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="amount",
+     *          in="query",
+     *          description="Price of card.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="subtype_id",
+     *          in="query",
+     *          description="Subtype of card.",
+     *      ),
+     *     @OA\Parameter(
+     *          name="image_id",
+     *          in="query",
+     *          description="Image of card.",
+     *      ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Card created."
+     *     ),
+     *      @OA\Response(
+     *         response=400,
+     *         description="Bad request."
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not found."
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error."
+     *     )
+     * )
      */
-    public function update(Request $request, int $id): CardResource|BadRequestResource|ErrorResource
+    public function update(Request $request, int $id): Response
     {
         try {
             $validator = Validator::make($request->all(), [
@@ -119,30 +300,47 @@ class CardController extends Controller
                 throw new BadRequestException($validator->errors(), Response::HTTP_BAD_REQUEST);
             }
 
-            $response = new CardResource($this->repository->update($request->all(), $id));
+            $response = Response(new CardResource($this->repository->update($request->all(), $id)));
         } catch (BadRequestException $badRequestException) {
-            $response = new BadRequestResource($badRequestException);
+            $response = Response($badRequestException->getMessage(), $badRequestException->getCode());
         } catch (ModelNotFoundException $notFoundException) {
-            $response = new ErrorResource($notFoundException);
+            $response = Response($notFoundException->getMessage(), $notFoundException->getCode());
         } catch (Exception $exception) {
-            $response = new ErrorResource($exception);
+            $response = Response($exception->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
 
         return $response;
     }
 
     /**
-     * Remove the specified resource from storage.
+     * Delete a card.
      *
-     * @param int $id
-     * @return ErrorResource|int
+     * @OA\Delete(
+     *     path="/api/card/{id}",
+     *     tags={"Cards"},
+     *     operationId="card-delete",
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="Card ID.",
+     *          required=true
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Card deleted."
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error."
+     *     )
+     * )
      */
-    public function destroy(int $id): ErrorResource|int
+    public function destroy(int $id): Response
     {
         try {
-            $response = $this->repository->delete($id);
+            $response = Response($this->repository->delete($id));
         } catch (Exception $exception) {
-            $response = new ErrorResource($exception);
+            $response = Response($exception->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
 
         return $response;
